cleanup warning declarations

--- a/moveit_core/CMakeLists.txt
+++ b/moveit_core/CMakeLists.txt
@@ -4,11 +4,9 @@ project(moveit_core)
 add_compile_options(-std=c++11)
 
 # Warnings
-add_definitions(-W -Wall -Wextra
-  -Wwrite-strings -Wunreachable-code -Wpointer-arith
-  -Winit-self -Wredundant-decls
+add_definitions(-Wall -Wextra
+  -Wwrite-strings -Wunreachable-code -Wpointer-arith -Wredundant-decls -Wcast-qual
   -Wno-unused-parameter -Wno-unused-function)
-#TODO(davetcoleman) enable -Wcast-qual
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
