drop 'maybe-uninitialized' warning

--- a/moveit_core/CMakeLists.txt
+++ b/moveit_core/CMakeLists.txt
@@ -6,7 +6,7 @@ add_compile_options(-std=c++11)
 # Warnings
 add_definitions(-Wall -Wextra
   -Wwrite-strings -Wunreachable-code -Wpointer-arith -Wredundant-decls -Wcast-qual
-  -Wno-unused-parameter -Wno-unused-function)
+  -Wno-unused-parameter -Wno-unused-function -Wno-maybe-uninitialized)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
