--- a/moveit_setup_assistant/CMakeLists.txt
+++ b/moveit_setup_assistant/CMakeLists.txt
@@ -71,6 +71,8 @@ set(HEADERS
   src/widgets/end_effectors_widget.h
   src/widgets/virtual_joints_widget.h
   src/widgets/passive_joints_widget.h
+  src/widgets/controllers_widget.h
+  src/widgets/controller_edit_widget.h
   src/widgets/configuration_files_widget.h
   src/widgets/setup_screen_widget.h
   src/widgets/author_information_widget.h
@@ -105,6 +107,8 @@ add_library(${PROJECT_NAME}_widgets
   src/widgets/virtual_joints_widget.cpp
   src/widgets/passive_joints_widget.cpp
   src/widgets/configuration_files_widget.cpp
+  src/widgets/controllers_widget.cpp
+  src/widgets/controller_edit_widget.cpp
   src/widgets/navigation_widget.cpp
   src/widgets/header_widget.cpp
   src/widgets/setup_assistant_widget.cpp
