Perception screen added for the SA (#969)
* Added Perception screen

* perception used calss instead of struct

--- a/moveit_setup_assistant/CMakeLists.txt
+++ b/moveit_setup_assistant/CMakeLists.txt
@@ -71,6 +71,7 @@ set(HEADERS
   src/widgets/end_effectors_widget.h
   src/widgets/virtual_joints_widget.h
   src/widgets/passive_joints_widget.h
+  src/widgets/perception_widget.h
   src/widgets/configuration_files_widget.h
   src/widgets/setup_screen_widget.h
   src/widgets/author_information_widget.h
@@ -104,6 +105,7 @@ add_library(${PROJECT_NAME}_widgets
   src/widgets/end_effectors_widget.cpp
   src/widgets/virtual_joints_widget.cpp
   src/widgets/passive_joints_widget.cpp
+  src/widgets/perception_widget.cpp
   src/widgets/configuration_files_widget.cpp
   src/widgets/navigation_widget.cpp
   src/widgets/header_widget.cpp
@@ -146,9 +148,8 @@ install(DIRECTORY templates DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 if(CATKIN_ENABLE_TESTING)
   find_package(moveit_resources REQUIRED)
   include_directories(${moveit_resources_INCLUDE_DIRS})
-
-  catkin_add_gtest(test_writing_ros_controllers test/moveit_config_data_test.cpp)
-  target_link_libraries(test_writing_ros_controllers  ${PROJECT_NAME}_tools
+  catkin_add_gtest(test_reading_writing_config test/moveit_config_data_test.cpp)
+  target_link_libraries(test_reading_writing_config  ${PROJECT_NAME}_tools
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
   ${MOVEIT_LIB_NAME})
