--- a/moveit/package.xml
+++ b/moveit/package.xml
@@ -26,6 +26,7 @@
   <run_depend>moveit_plugins</run_depend>
   <run_depend>moveit_ros</run_depend>
   <run_depend>moveit_setup_assistant</run_depend>
+  <run_depend>moveit_setup_assistant_plugins</run_depend>
 
   <export>
     <metapackage/>
