--- a/moveit_setup_assistant_plugins/author_info_plugin/CMakeLists.txt
+++ b/moveit_setup_assistant_plugins/author_info_plugin/CMakeLists.txt
@@ -1,6 +1,32 @@
-set(MOVEIT_LIB_NAME moveit_author_info)
+set(MOVEIT_LIB_NAME moveit_author_plugin)
 
 add_library(${MOVEIT_LIB_NAME} author_plugin.cpp)
+
+# definition needed for boost/math/constants/constants.hpp included by Ogre to compile
+add_definitions(-DBOOST_MATH_DISABLE_FLOAT128)
+
+if(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
+
+include_directories(include)
+
+find_package(Boost REQUIRED COMPONENTS thread filesystem system program_options)
+include_directories(${Boost_INCLUDE_DIRS})
+link_directories(${Boost_LIBRARY_DIRS})
+
+find_package(catkin REQUIRED COMPONENTS
+  moveit_ros_planning
+  moveit_ros_visualization
+  rviz
+  urdf
+  rosconsole
+  roscpp
+  srdfdom
+)
+include_directories(${catkin_INCLUDE_DIRS})
+link_directories(${catkin_LIBRARY_DIRS})
+
 
 # Qt Stuff
 if(rviz_QT_VERSION VERSION_LESS "5")
@@ -15,8 +41,22 @@ set(CMAKE_AUTOMOC ON)
 add_definitions(-DQT_NO_KEYWORDS)
 
 
+# Support new yaml-cpp API.
+find_package(PkgConfig)
+pkg_check_modules(YAMLCPP REQUIRED yaml-cpp>=0.5)
+include_directories(${YAMLCPP_INCLUDE_DIRS})
+link_directories(${YAMLCPP_LIBRARY_DIRS})
+
+catkin_package(
+  CATKIN_DEPENDS
+    moveit_ros_planning
+    moveit_ros_visualization
+)
+
+
 set_target_properties(${MOVEIT_LIB_NAME} PROPERTIES VERSION ${${PROJECT_NAME}_VERSION})
 
-target_link_libraries(${MOVEIT_LIB_NAME} ${QT_LIBRARIES} ${catkin_LIBRARIES})
+target_link_libraries(${MOVEIT_LIB_NAME} 
+  ${Boost_LIBRARIES} ${QT_LIBRARIES} ${catkin_LIBRARIES})
 
 install(TARGETS ${MOVEIT_LIB_NAME} LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
