--- a/moveit_setup_assistant_plugins/CMakeLists.txt
+++ b/moveit_setup_assistant_plugins/CMakeLists.txt
@@ -9,8 +9,10 @@ endif()
 
 find_package(Boost)
 find_package(catkin REQUIRED COMPONENTS
+  moveit_core
   moveit_ros_planning
   moveit_ros_visualization
+  moveit_setup_assistant
   rviz
   urdf
   rosconsole
