--- a/moveit_setup_assistant_plugins/CMakeLists.txt
+++ b/moveit_setup_assistant_plugins/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   moveit_ros_planning
   moveit_ros_visualization
   moveit_setup_assistant
+  moveit_setup_assistant_plugins
   rviz
   urdf
   rosconsole
