meta object error

--- a/moveit_setup_assistant/CMakeLists.txt
+++ b/moveit_setup_assistant/CMakeLists.txt
@@ -49,6 +49,7 @@ link_directories(${YAMLCPP_LIBRARY_DIRS})
 catkin_package(
   INCLUDE_DIRS
     include
+    src/widgets
   LIBRARIES
     ${PROJECT_NAME}_tools
   CATKIN_DEPENDS
@@ -139,7 +140,7 @@ install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_widgets ${PROJECT_NAME}_tools ${
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 install(DIRECTORY include/ DESTINATION include)
-
+install(DIRECTORY src/widgets/ DESTINATION include FILES_MATCHING PATTERN "*.h")
 install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 install(DIRECTORY resources DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 install(DIRECTORY templates DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
